# hipeac-apspgemm-reproduce

./: CMakeLists.txt  COO.cpp  CSR.cpp  Gustavson.cpp  Hete.cpp  NNZs.cpp  PERFORMANCE_SUMMARY.md  README.md  REPORT.md  benchmark_results.csv  download_benchmark_matrices.sh  download_matrices.sh  main.cu  run_comprehensive_benchmark.sh  visualize_results.py
GPU/: DGEMM.cpp  GustavsonSpGEMM.cu  SpGEMM.cpp  SpMM.cu  memory.cu  utils.cu
benchmark_matrices/: synthetic_100.mtx  synthetic_1000.mtx  synthetic_2000.mtx  synthetic_500.mtx
include/: COO.h  CSR.h  Vector.h
test_matrices/: test_100x100.mtx  test_10x10.mtx
